--- a/package.json
+++ b/package.json
@@ -26,6 +26,10 @@
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
+    "body-parser": "^1.15.1",
+    "compression": "^1.6.1",
+    "cors": "^2.7.1",
+    "express": "^4.13.4",
     "lodash": "^4.12.0",
     "mongodb": "^2.1.18"
   }
