--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "node src/server/start.js",
     "syncDb": "node src/server/start.js syncDb",
-    "test": "node src/server/start.js tests"
+    "test": "npm run syncDb && node src/server/start.js tests"
   },
   "repository": {
     "type": "git",
@@ -27,9 +27,11 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
     "body-parser": "^1.15.1",
+    "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.12.0",
     "mongodb": "^2.1.18"
   }
