--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-3": "^6.5.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "isomorphic-fetch": "^2.2.1",
+    "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
     "mongodb": "^2.1.18"
   }
