--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-node_modules 
+public/bundle.js
+public/bundle.js.map
+public/vendor.bundle.js
+public/vendor.bundle.js.map
+public/index.html
+node_modules
 .idea
