--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   },
   "homepage": "https://github.com/giladartzi/ridd.li#readme",
   "devDependencies": {
-    "babel-register": "^6.8.0"
+    "babel-register": "^6.8.0",
+    "html-webpack-plugin": "^2.16.1"
   },
   "dependencies": {
+    "babel": "^6.5.2",
+    "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "babel-preset-stage-3": "^6.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
@@ -35,6 +39,12 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
-    "mongodb": "^2.1.18"
+    "mongodb": "^2.1.18",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1"
   }
 }
