--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
     "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "ws": "^1.1.0"
   }
 }
