--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   "homepage": "https://github.com/giladartzi/ridd.li#readme",
   "devDependencies": {
     "babel-register": "^6.8.0",
-    "html-webpack-plugin": "^2.16.1"
+    "css-loader": "^0.23.1",
+    "html-webpack-plugin": "^2.16.1",
+    "style-loader": "^0.13.1"
   },
   "dependencies": {
     "babel": "^6.5.2",
@@ -40,12 +42,14 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
+    "material-ui": "^0.15.0",
     "mongodb": "^2.1.18",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
