--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-polyfill": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0",
     "babel-preset-stage-3": "^6.5.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.1",
