--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "style-loader": "^0.13.1"
   },
   "dependencies": {
+    "appcache-webpack-plugin": "^1.2.1",
     "babel": "^6.5.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
