--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "compression": "^1.6.1",
     "cors": "^2.7.1",
     "express": "^4.13.4",
+    "file-loader": "^0.8.5",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^6.2.0",
     "lodash": "^4.12.0",
