--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "file-loader": "^0.8.5",
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^6.2.0",
+    "letsencrypt-express": "^1.1.5",
     "lodash": "^4.12.0",
     "material-ui": "^0.15.0",
     "mongodb": "^2.1.18",
@@ -57,6 +58,7 @@
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0",
+    "spdy": "^3.3.3",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
