--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "^1.15.1",
     "chalk": "^1.1.3",
     "compression": "^1.6.1",
+    "cookie-parser": "^1.4.3",
     "cors": "^2.7.1",
     "express": "^4.13.4",
     "file-loader": "^0.8.5",
