--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
+    "redux-saga": "^0.10.5",
     "redux-thunk": "^2.1.0",
     "spdy": "^3.3.3",
     "url-loader": "^0.5.7",
